<resources>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan</string>
    <string name="none_paired">None Paired</string>
    <string name="none_found">None Found</string>
    <string name="select_device">Select Device</string>
    <string name="scanning">Scanning...</string>
    <string name="app_name">CÂNTAR PENTRU CAFEA</string>
    <string name="app_title">SCLARIA</string>
    <string name="remote_scale_button">CÂNTAR REMOTE</string>
    <string name="pour_over_button">FILTRU</string>
    <string name="espresso_button">ESPRESSO</string>
    <string name="rem_back_button">ÎNAPOI</string>
    <string name="text_timer">00:00</string>
    <string name="text_scale">0.0g</string>
    <string name="tare_button">TARA</string>
    <string name="calculator_text">CALCULATOR PENTRU RAȚIE</string>
    <string name="date_espresso_text">DATE PENTRU ESPRESSO:</string>
    <string name="roast_time">*Vechime cafea:</string>
    <string name="ratio_text">*Ratia:</string>
    <string name="start">Start</string>
    <string name="one_day">1 zi</string>
    <string name="one_month">1 luna</string>
    <string name="press_espressor">Presiune espressor:</string>
    <string name="celsius_degrees">°C</string>
    <string name="temp_espressor">*Temperatură apă:</string>
    <string name="espressor_type">Espressor:</string>
    <string name="set_default">Set as Default</string>
    <string name="unknown">Unknown</string>
    <string name="coffee_type">Tipul cafelei:</string>
    <string name="default_pressure">9</string>
    <string name="default_degrees">85</string>
    <string name="ratio_input_text">1 :</string>
    <string name="hint_ratio_text">15</string>
    <string name="es_ratio_text">2</string>
    <string name="need_text">Vei avea nevoie de:</string>
    <string name="coffee_grams_text">27</string>
    <string name="es_coffee_grams_text">14</string>
    <string name="grams_text">g.</string>
    <string name="bar_text">bar</string>
    <string name="coffee_text">*Cafea:</string>
    <string name="water_text">Apă:</string>
    <string name="empty"></string>
    <string name="next">URMĂTOR</string>
    <string name="start_brew_text">PREPARARE</string>
    <string name="title">PASUL %1$d DIN %2$d</string>
    <string name="subtitle1">FIERBE APA</string>
    <string name="content1">Încălzește %1$s g de apă la 90°C.</string>
    <string name="subtitle2">DRIPPER-UL</string>
    <string name="content2">Poziționează dripper-ul pe o cană sau o carafă.</string>
    <string name="subtitle3">INTRODU FILTRUL</string>
    <string name="content3">Introdu filtrul în dripper și toarnă peste el puțină apă cât sa îl clătești pentru a scăpa de gustul de hârtie și să incălzești dripper-ul. Aruncă apa din carafă.</string>
    <string name="subtitle4">ADAUGĂ CAFEAUA</string>
    <string name="content4">Adaugă cele %1$sg de cafea râșnită cu o granulație mare.</string>
    <string name="subtitle5">TOARNĂ PUȚINĂ APĂ</string>
    <string name="content5">Adaugă %1$dg din apa fierbinte turnând constant, cu flux scăzut și cu mișcări circulare dinspre exterior spre interior până când ajungi în centru.</string>
    <string name="subtitle6">PREINFUZIE</string>
    <string name="content6">Așteaptă 40s pentru a ieși dioxidul de carbon din cafea. Acest pas este important pentru ca CO2 dă un gust acru si împiedică apa din a face contact cu cafeaua.</string>
    <string name="subtitle7">PREGĂTEȘTE-TE</string>
    <string name="content7">Pregătește-te sa torni restul de %1$dg de apă constant, cu flux scăzut și cu mișcări circulare dinspre exterior spre interior timp 2 minute.  </string>
    <string name="subtitle8">TOARNĂ APA</string>
    <string name="content8">Incearcă să torni apa cu %1$.1fg/s.</string>
    <string name="subtitle9">SAVUREAZĂ CAFEAUA</string>
    <string name="content9">Cafeaua ta este gata!</string>
    <string name="weight">0.0g</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_espresso">EspressoActivity</string>
</resources>