<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ratio_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ratio"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="475dp"
        android:background="#EBFDECDC"
        android:textAlignment="center"
        tools:context=".Ratio">

        <EditText
            android:id="@+id/water_textbox"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="69dp"
            android:layout_height="44dp"
            android:layout_alignBottom="@id/textView"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="48dp"
            android:layout_toRightOf="@+id/textView2"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#492105"
            android:textColorHint="#492105"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="18dp"
            android:text="@string/grams_text"
            android:textColor="#492105"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/water_textbox"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="75dp"
            android:layout_height="33dp"
            android:layout_marginStart="224dp"
            android:layout_marginTop="380dp"
            android:layout_marginEnd="16dp"
            android:text="@string/water_text"
            android:textColor="#492105"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.729"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="202dp"
            android:layout_height="85dp"
            android:layout_marginStart="177dp"
            android:layout_marginEnd="177dp"
            android:layout_marginBottom="336dp"
            android:text="@string/calculator_text"
            android:textAlignment="center"
            android:textColor="#492105"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.544"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/coffee_ratio_textbox"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:layout_alignBottom="@id/textView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="260dp"
            android:layout_toRightOf="@+id/textView2"
            android:background="#FFFFFF"
            android:cursorVisible="false"
            android:editable="false"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true"
            android:text="@string/ratio_input_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#492105"
            android:textColorHint="#492105"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/water_ratio_textbox"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:layout_alignBottom="@id/textView"
            android:layout_marginTop="260dp"
            android:layout_toRightOf="@+id/textView2"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true"
            android:text="@string/hint_ratio_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#492105"
            android:textColorHint="#492105"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/coffee_ratio_textbox"
            app:layout_constraintTop_toTopOf="parent">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="90dp"
            android:layout_height="33dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="380dp"
            android:text="@string/coffee_text"
            android:textColor="#492105"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/coffee_textbox"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="69dp"
            android:layout_height="44dp"
            android:layout_alignBottom="@id/textView"
            android:layout_marginStart="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="324dp"
            android:layout_toRightOf="@+id/textView2"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true"
            android:text="@string/coffee_grams_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#492105"
            android:textColorHint="#492105"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="92dp"
            android:text="@string/grams_text"
            android:textColor="#492105"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/coffee_textbox"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="69dp"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="222dp"
            android:layout_marginBottom="468dp"
            android:hint="@string/ratio_input_text"
            android:text="@string/ratio_text"
            android:textColor="#492105"
            android:textColorHint="#492105"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.057" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="150dp"
            android:layout_height="37dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="300dp"
            android:text="@string/need_text"
            android:textColor="#492105"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>