<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBFDECDC"
    tools:context=".RemScaleActivity">

    <Button
        android:id="@+id/rem_tare_button"
        android:layout_width="155dp"
        android:layout_height="80dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="79dp"
        android:text="@string/tare_button"
        android:textSize="30sp"
        app:backgroundTint="#492105"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="28dp"
        android:background="#00FFFFFF"
        android:onClick= "onClickStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/play_timer" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="235dp"
        android:background="#00FFFFFF"
        android:contentDescription="reset timer"
        android:onClick="onClickReset"
        app:layout_constraintEnd_toStartOf="@+id/imageButton7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reset_timer" />

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="261dp"
        android:layout_height="95dp"
        android:layout_marginBottom="416dp"
        android:text="@string/text_timer"
        android:textAlignment="center"
        android:textSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="176dp"
        android:layout_height="75dp"
        android:layout_marginStart="177dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="192dp"
        android:text="@string/text_scale"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rem_back_button"
        android:layout_width="413dp"
        android:layout_height="62dp"
        android:onClick="onClickBack"
        android:text="@string/rem_back_button"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#00FFFFFF"
        android:textColorHint="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#492105"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#00FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>